cluster/apps/home/home-assistant/fake-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/target: ipv4.${SECRET_DOMAIN}
    external-dns/is-public: "true"
    hajimari.io/appName: Home Assistant
    hajimari.io/enable: "true"
    hajimari.io/icon: home
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  name: home-assistant
  namespace: home
spec:
  ingressClassName: traefik
  rules:
    - host: home.${SECRET_DOMAIN}
  tls:
    - hosts:
        - home.${SECRET_DOMAIN}
      secretName: "home-assistant-tls"
