cluster/apps/home/home-assistant/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant-authentik-ingress-route
  namespace: home
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`home.${SECRET_DOMAIN}`)
      priority: 10
      middlewares:
        - name: authentik
          namespace: networking
      services:
        - kind: Service
          name: home-assistant
          namespace: home
          port: 8123
    - kind: Rule
      match: "Host(`home.${SECRET_DOMAIN}`) && PathPrefix(`/outpost.goauthentik.io/`)"
      priority: 15
      services:
        - kind: Service
          name: ak-outpost-authentik-embedded-outpost
          namespace: security
          port: 9000
  tls:
    secretName: "home-assistant-tls"
